--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_guest.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_guest.html
@@ -39,10 +39,11 @@
             <!--表格查询结果区-->
             <div class="cv_content_square">
                 <el-table :data="tableData" style="width: 100%; margin:10px auto;" ref="multipleTable" stripe>
-                    <el-table-column prop="meetingGuestMeetingId" label="所属会议编号" width=""></el-table-column>
-                    <el-table-column prop="meetingGuestCrtUserId" label="创建人Id" width="90"></el-table-column>
+                    <el-table-column prop="meetingGuestMeetingId" label="所属会议编号" width="110"></el-table-column>
+                    <el-table-column prop="meetingTitle" label="所属会议名称" width=""></el-table-column>
+                    <el-table-column prop="userName" label="创建人" width="90"></el-table-column>
+                    <el-table-column prop="modUserName" label="更新人" width="90"></el-table-column>
                     <el-table-column prop="meetingGuestCrtTime" label="创建时间" width="200"></el-table-column>
-                    <el-table-column prop="meetingGuestModUserId" label="更新人Id" width="90"></el-table-column>
                     <el-table-column prop="meetingGuestModTime" label="更新时间" width="200"></el-table-column>
                     <el-table-column label="操作" width="100" fixed="right">
                         <template slot-scope="scope">
@@ -71,14 +72,26 @@
             <!--表单信息-->
             <div class="cv_content_square">
                 <el-form :model="meetingGuestForm" :rules="meetingGuestFormRules"  ref="meetingGuestForm" status-icon class="demo-ruleForm" label-width="15%" label-position="right">
-                    <el-row class="el-row-h80">
+                    <el-row class="el-row-h70">
                         <el-col :span="24">
-                            <el-form-item label-width="13%" prop="meetingGuestMeetingId" label="所属会议编号" style="margin:0;">
+                            <el-form-item label-width="16%" prop="meetingGuestMeetingId" label="所属会议编号" style="margin:0;">
                                 <el-input
                                 clearable
                                 type="text"
                                 v-model="meetingGuestForm.meetingGuestMeetingId"
                                 auto-complete="off"></el-input>
+                            </el-form-item>
+                        </el-col>
+                    </el-row>
+                    <el-row class="el-row-h80">
+                        <el-col :span="24">
+                            <el-form-item label-width="16%" prop="meetingTitle" label="所属会议名称" style="margin:0;">
+                                <el-input
+                                clearable
+                                type="text"
+                                v-model="meetingGuestForm.meetingTitle"
+                                auto-complete="off"
+                                :disabled="true"></el-input>
                             </el-form-item>
                         </el-col>
                     </el-row>
@@ -116,7 +129,7 @@
 
             <!--嘉宾库弹出层开始-->
             <el-dialog title="嘉宾列表" :visible.sync="showGuestLibDialog" width="100%" :fullscreen="true" :show-close="false">
-                <el-form :model="searchGuestForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right"  >
+                <el-form :model="searchGuestForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
                     <el-row class="el-row-h60">
                         <el-col :span="12">
                             <el-form-item label="嘉宾名称" style="margin:0;">
