--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_institution.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_institution.html
@@ -39,10 +39,11 @@
             <!--表格查询结果区-->
             <div class="cv_content_square">
                 <el-table :data="tableData" style="width: 100%; margin:10px auto;" ref="multipleTable" stripe>
-                    <el-table-column prop="meetingCooperationMeetingId" label="所属会议编号" width=""></el-table-column>
-                    <el-table-column prop="meetingCooperationCrtUserId" label="创建人Id" width="90"></el-table-column>
+                    <el-table-column prop="meetingCooperationMeetingId" label="所属会议编号" width="110"></el-table-column>
+                    <el-table-column prop="meetingTitle" label="所属会议名称" width=""></el-table-column>
+                    <el-table-column prop="userName" label="创建人" width="90"></el-table-column>
+                    <el-table-column prop="modUserName" label="更新人" width="90"></el-table-column>
                     <el-table-column prop="meetingCooperationCrtTime" label="创建时间" width="200"></el-table-column>
-                    <el-table-column prop="meetingCooperationModUserId" label="更新人Id" width="90"></el-table-column>
                     <el-table-column prop="meetingCooperationModTime" label="更新时间" width="200"></el-table-column>
                     <el-table-column label="操作" width="100" fixed="right">
                         <template slot-scope="scope">
@@ -71,7 +72,7 @@
             <!--表单信息-->
             <div class="cv_content_square">
                 <el-form :model="meetingCopForm" :rules="meetingCopFormRules"  ref="meetingCopForm" status-icon class="demo-ruleForm" label-width="15%" label-position="right">
-                    <el-row class="el-row-h80">
+                    <el-row class="el-row-h70">
                         <el-col :span="24">
                             <el-form-item label-width="13%" prop="meetingCooperationMeetingId" label="所属会议编号" style="margin:0;">
                                 <el-input
@@ -79,6 +80,18 @@
                                 type="text"
                                 v-model="meetingCopForm.meetingCooperationMeetingId"
                                 auto-complete="off"></el-input>
+                            </el-form-item>
+                        </el-col>
+                    </el-row>
+                    <el-row class="el-row-h80">
+                        <el-col :span="24">
+                            <el-form-item label-width="13%" prop="meetingTitle" label="所属会议名称" style="margin:0;">
+                                <el-input
+                                clearable
+                                type="text"
+                                v-model="meetingCopForm.meetingTitle"
+                                auto-complete="off"
+                                :disabled="true"></el-input>
                             </el-form-item>
                         </el-col>
                     </el-row>
