--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_rank.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_rank.html
@@ -39,10 +39,11 @@
             <!--表格查询结果区-->
             <div class="cv_content_square">
                 <el-table :data="tableData" style="width: 100%; margin:10px auto;" ref="multipleTable" stripe>
-                    <el-table-column prop="meetingRankMeetingId" label="所属会议编号" width=""></el-table-column>
-                    <el-table-column prop="meetingRankCrtUserId" label="创建人" width="90"></el-table-column>
+                    <el-table-column prop="meetingRankMeetingId" label="所属会议编号" width="110"></el-table-column>
+                    <el-table-column prop="meetingTitle" label="所属会议名称" width=""></el-table-column>
+                    <el-table-column prop="userName" label="创建人" width="90"></el-table-column>
+                    <el-table-column prop="modUserName" label="更新人" width="90"></el-table-column>
                     <el-table-column prop="meetingRankCrtTime" label="创建时间" width="200"></el-table-column>
-                    <el-table-column prop="meetingRankModUserId" label="更新人" width="90"></el-table-column>
                     <el-table-column prop="meetingRankModTime" label="更新时间" width="200"></el-table-column>
                     <el-table-column label="操作" width="100" fixed="right">
                         <template slot-scope="scope">
@@ -71,9 +72,9 @@
             <!--表单信息-->
             <div class="cv_content_square">
                 <el-form :model="rankForm" :rules="rankFormRules"  ref="rankForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right">
-                    <el-row class="el-row-h80">
-                        <el-col :span="16">
-                            <el-form-item label-width="20%" prop="meetingRankMeetingId" label="所属会议编号" style="margin:0;">
+                    <el-row class="el-row-h70">
+                        <el-col>
+                            <el-form-item label-width="16%" prop="meetingRankMeetingId" label="所属会议编号" style="margin:0;">
                                 <el-input
                                 clearable
                                 type="text"
@@ -81,11 +82,17 @@
                                 auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
-                        <el-col class="el-row-h40" :span="3" :offset="1">
-                            <el-button type="primary" style="width:100%" @click="submitCreatEdit('rankForm')">保存</el-button>
-                        </el-col>
-                        <el-col class="el-row-h40" :span="3" :offset="1">
-                            <el-button type="primary" style="width:100%" @click="closeEditCreatEdit('rankForm')">取消</el-button>
+                    </el-row>
+                    <el-row class="el-row-h80">
+                        <el-col>
+                            <el-form-item label-width="16%" prop="meetingTitle" label="所属会议名称" style="margin:0;">
+                                <el-input
+                                clearable
+                                type="text"
+                                v-model="rankForm.meetingTitle"
+                                auto-complete="off"
+                                :disabled="true"></el-input>
+                            </el-form-item>
                         </el-col>
                     </el-row>
 
@@ -195,7 +202,15 @@
                         </el-col>
                     </el-row>
 
-
+                    <el-row style="margin-top:30px;">
+                        <el-col class="el-row-h40" :span="3" :offset="8">
+                            <el-button type="primary" style="width:100%" @click="submitCreatEdit('rankForm')">保存</el-button>
+                        </el-col>
+                        <el-col class="el-row-h40" :span="3" :offset="2">
+                            <el-button type="primary" style="width:100%" @click="closeEditCreatEdit('rankForm')">取消</el-button>
+                        </el-col>
+                    </el-row>
+                
 
                 </el-form>
             </div>
