--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_institution.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/meeting_institution.html
@@ -169,9 +169,9 @@
             </el-row>
 
 
-            <!--自媒体图库弹出层开始-->
+            <!--机构列表弹出层开始-->
             <el-dialog title="机构列表" :visible.sync="showMeidaLibDialog" width="100%" :fullscreen="true" :show-close="false">
-                <el-form :model="searchCoperForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right"  >
+                <el-form :model="searchCoperForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
                     <el-row class="el-row-h60">
                         <el-col :span="12">
                             <el-form-item label="机构名称" style="margin:0;">
@@ -223,7 +223,7 @@
                     </el-pagination>
                 </div>
             </el-dialog>
-            <!--自媒体图库弹出层结束-->
+            <!--机构列表弹出层结束-->
 
 
         </div>
