--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/calendar_list.html
@@ -85,7 +85,8 @@
                                         clearable
                                         type="text"
                                         v-model="calendarForm.meetingAgendaMeetingId"
-                                        auto-complete="off"></el-input>
+                                        auto-complete="off"
+                                        :disabled="creatOrEdit == 1"></el-input>
                                 </el-form-item>
                             </el-col>
                         </el-row>
@@ -256,7 +257,7 @@
 
                     <el-row style="margin-top:30px;">
                         <el-col class="el-row-h40" :span="3" :offset="8">
-                            <el-button type="primary" style="width:100%" @click="submitCreatEdit('calendarForm')">保存</el-button>
+                            <el-button type="primary" style="width:100%" @click="testSubmit('calendarForm')">保存</el-button>
                         </el-col>
                         <el-col class="el-row-h40" :span="3" :offset="2">
                             <el-button type="primary" style="width:100%" @click="closeCreatOrEdit('calendarForm')">取消</el-button>
